@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "05.09.2012"
-#define TIME_STR "21:38:05"
-#define SUB_VERS 1121-Mike
-#define SVN_VERS "ersky9x-r109"
+#define DATE_STR "07.09.2012"
+#define TIME_STR "09:37:56"
+#define SUB_VERS 1124-Mike
+#define SVN_VERS "ersky9x-r110"
 #define MOD_VERS "REVB"
